<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/top_level_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/title_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backdrop_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/backdrop_height"
                android:scaleType="fitXY"
                android:src="@drawable/image_placeholder" />

            <ImageView
                android:id="@+id/holder_image"
                android:layout_width="@dimen/poster_width"
                android:layout_height="@dimen/poster_left"
                android:layout_below="@+id/backdrop_image"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-20dp"
                android:background="@color/holder_background"
                android:elevation="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/image_placeholder"
                android:translationZ="10dp" />

            <RelativeLayout
                android:id="@+id/content_panel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/backdrop_image"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/title_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/poster_left"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/title"
                    android:textColor="#000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_view"
                    android:layout_marginStart="150dp"
                    android:text="@string/release_date"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/release_date"
                    android:layout_marginStart="150dp"
                    android:orientation="horizontal">

                    <RatingBar
                        android:id="@+id/rating_bar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:numStars="5"
                        android:stepSize="1" />

                    <TextView
                        android:id="@+id/rating_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="1.0"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/overview_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="140dp"
                    android:fontFamily="serif"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/plot"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/overview_title"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/overview_content"
                    android:textSize="15sp"
                    android:textColor="@android:color/secondary_text_light"/>

                <TextView
                    android:id="@+id/trailer_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/overview"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="7dp"
                    android:fontFamily="serif"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/trailer"
                    android:textSize="21sp" />

                <HorizontalScrollView
                    android:id="@+id/trailer_scroll"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@id/trailer_title"
                    android:layout_marginTop="5dp"
                    android:scrollbars="none">

                    <LinearLayout
                        android:id="@+id/trailer_container"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:visibility="invisible"/>
                </HorizontalScrollView>

                <LinearLayout
                    android:id="@+id/review_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/trailer_scroll"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:visibility="invisible">

                    <TextView
                        android:id="@+id/review_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="serif"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:text="@string/review"
                        android:textSize="21sp" />
                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <com.santhosh.smarttheatre.FABToggle
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorPrimary"
        android:elevation="15dp"
        android:scaleType="center"
        android:src="@drawable/fab_heart"
        android:id="@+id/floatingActionButton"
        app:backgroundTint="?attr/colorPrimary"
        app:rippleColor="@android:color/background_light"
        app:layout_behavior="com.santhosh.smarttheatre.FABBehaviour"
        android:stateListAnimator="@animator/raise"/>

</android.support.design.widget.CoordinatorLayout>